# begirex

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  DESIGN.md  DESIGN_SYSTEM.md  FILE_STRUCTURE.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  UX.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
specs/001-core/: PLAN.md  PRD.md  SPEC.md  TASKS.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.bundled.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/scripts/: build-flavors.sh
src-tauri/src/: binary_manager.rs  engine_supervisor.rs  error.rs  ipc.rs  lib.rs  main.rs  persistence.rs  preset_service.rs  progress_parser.rs  queue_manager.rs  settings_service.rs
src-tauri/tests/: binary_detection.rs  engine_integration.rs  logs_and_retry.rs  queue_lifecycle.rs  queue_scheduling.rs  settings_persistence.rs
src/lib/: ipc.ts  types.ts
src/lib/components/: BinaryRow.svelte  FactsGrid.svelte  FormatPicker.svelte  FormatQuickPicks.svelte  GlobalBanner.svelte  LogDisclosure.svelte  QueueRow.svelte  QueueToolbar.svelte  SelectionBar.svelte  Sidebar.svelte  StageToken.svelte  VirtualList.svelte
src/lib/components/ui/checkbox/: checkbox.svelte
src/lib/components/ui/dialog/: dialog-content.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-trigger.svelte
src/lib/components/ui/select/: select-item.svelte  select-scroll-down-button.svelte  select-scroll-up-button.svelte  select-trigger.svelte
src/lib/components/ui/sheet/: sheet-content.svelte
src/lib/components/ui/sonner/: sonner.svelte
src/lib/stores/: binaryHealth.svelte.ts  filters.svelte.ts  presets.svelte.ts  queue.svelte.ts  settings.svelte.ts
src/lib/views/: AddDownload.svelte  DetailDrawer.svelte  Onboarding.svelte  Presets.svelte  Queue.svelte  Settings.svelte  Shell.svelte
