[package]
name = "begirex"
version = "0.1.0"
edition = "2021"

[lib]
name = "begirex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"

[[bin]]
name = "begirex"
path = "src/main.rs"
