[package]
name = "begirex"
version = "0.1.0"
edition = "2021"

[lib]
name = "begirex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
# ponytail: tauri::async_runtime::spawn covers task spawning, but child-process
# spawning + async line reading needs tokio::process/io directly — tauri
# already resolves tokio transitively (as its runtime), so this just unifies
# features on the same already-resolved version rather than adding real
# dependency weight.
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "sync"] }

[[bin]]
name = "begirex"
path = "src/main.rs"
