[package]
name = "begirex"
version = "0.1.0"
edition = "2021"

[lib]
name = "begirex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# T20: compile-time build flavor (ARCHITECTURE §9). Off (default) = `light`
# — detect/download yt-dlp/ffmpeg like every task through T19 already did.
# On = `bundled` — seeds ytdlp_path/ffmpeg_path to the binaries packaged
# alongside the app (src-tauri/binaries/bin/, wired via
# tauri.bundled.conf.json's `bundle.resources`) and skips S1 detection.
[features]
bundled = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
# ponytail: tauri::async_runtime::spawn covers task spawning, but child-process
# spawning + async line reading needs tokio::process/io directly — tauri
# already resolves tokio transitively (as its runtime), so this just unifies
# features on the same already-resolved version rather than adding real
# dependency weight.
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "sync"] }
# T16 in-app binary download: streamed HTTP fetch + progress, plus unpacking
# the ffmpeg static-build archive (zip on macOS/Windows, tar.xz on Linux).
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
zip = "0.6"
tar = "0.4"
xz2 = "0.1"

[[bin]]
name = "begirex"
path = "src/main.rs"
